feat(auth): implement CSRF protection and cookie management for authentication - Added CsrfAuthGuard to validate CSRF tokens from cookies and headers. - Updated AuthController to set authentication cookies on login and registration. - Implemented logout functionality to clear cookies. - Enhanced AuthService to return user profile with additional type safety.
fix(deps): update npm install commands to handle legacy peer dependencies
- Modified npm ci commands in deploy.yml and Dockerfile.api to include --legacy-peer-deps.

chore(front): refactor Angular project configuration
- Updated project.json to use new Angular build executors.
- Simplified imports in various components by removing unnecessary CommonModule.

feat(front): add authentication component and routing
- Created AuthComponent with login and signup forms.
- Implemented auth guard to protect dashboard route.
- Added xsrfInterceptor to handle CSRF tokens in HTTP requests.

chore(shared): create user library for user profile management
- Introduced shared user library with UserProfile interface.
- Configured library with necessary build and test configurations.

fix(package): update package dependencies for stability
- Locked versions of Taiga UI packages and added cookie-parser and csurf for CSRF protection.

--- a/libs/front/ui/day-card-dialog/src/lib/day-card-dialog/day-card-dialog.component.html
+++ b/libs/front/ui/day-card-dialog/src/lib/day-card-dialog/day-card-dialog.component.html
@@ -7,7 +7,7 @@
       tuiTab
       type="button"
       (click)="onClick(tab)"
-    >
+      >
       {{ tab | widgetName }}
     </button>
   }
@@ -23,14 +23,15 @@
     <ng-container
       [ngComponentOutlet]="component"
       [ngComponentOutletInjector]="injector"
-    >
+      >
     </ng-container>
 
-    <ng-container
-      *ngIf="settingsComponent"
-      [ngComponentOutlet]="settingsComponent"
-      [ngComponentOutletInjector]="injector"
-    ></ng-container>
+    @if (settingsComponent) {
+      <ng-container
+        [ngComponentOutlet]="settingsComponent"
+        [ngComponentOutletInjector]="injector"
+      ></ng-container>
+    }
   </div>
 }
 
@@ -41,7 +42,7 @@
     type="button"
     class="button"
     appearance="secondary-grayscale"
-  >
+    >
     Save
   </button>
 </div>
