--- a/libs/front/ui/calendar/src/lib/calendar.component.html
+++ b/libs/front/ui/calendar/src/lib/calendar.component.html
@@ -1,20 +1,23 @@
 <div class="calendar-container">
-    <div class="header">
-      <button (click)="previousMonth()">&#8249;</button>
-      <span>{{ $currentDate() | date : 'MMMM yyyy' }}</span>
-      <button (click)="nextMonth()">&#8250;</button>
-    </div>
-  
-    <div class="week-days">
-      <div *ngFor="let day of weekDays" class="week-day">{{ day }}</div>
-    </div>
-  
-    <div class="days">
+  <div class="header">
+    <button (click)="previousMonth()">&#8249;</button>
+    <span>{{ $currentDate() | date : 'MMMM yyyy' }}</span>
+    <button (click)="nextMonth()">&#8250;</button>
+  </div>
+
+  <div class="week-days">
+    @for (day of weekDays; track day) {
+      <div class="week-day">{{ day }}</div>
+    }
+  </div>
+
+  <div class="days">
+    @for (day of $daysInMonth(); track day) {
       <lifestyle-day
-        *ngFor="let day of $daysInMonth()"
         [day]="day"
         [config]="$config()"
         (click)="openDayCard(day)"
       ></lifestyle-day>
-    </div>
+    }
   </div>
+</div>
